--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,8 @@
 PORT=3001
 
-STATE=dev
-DB_PASS=MySecr3tPasSword5436
-DB_NAME=AnyList
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER=postgres
+STATE=
+DB_PASS=
+DB_NAME=
+DB_HOST=
+DB_PORT=
+DB_USER=
